cabal-version:      2.4
name:               hs-blog
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A custom blog generator for markup files.

-- A longer description of the package.
description: This package provides a static blog generator 
            from a custom markup format to HTML. 
            It defines a parser for this custom markup format 
            as well as an html pretty printer EDSL.

            It is used as the example project in the online book 
            'Learn Haskell Blog Generator'. See the README for 
            more details.


homepage: https://github.com/jacksonneal/hs-blog
-- A URL where users can report bugs.
bug-reports: https://github.com/jacksonneal/hs-blog/issues
license: BSD-3-Clause 
license-file: LICENSE.txt 
category: Learning, Web 
extra-doc-files: 
  README.md

-- The license under which the package is released.
-- license:
author:             jacksonneal
maintainer:         jacksontneal@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-settings 
  default-language: Haskell2010
  ghc-options: 
    -Wall

library
    import: common-settings
    exposed-modules:  
      HsBlog 
        HsBlog.Convert 
        HsBlog.Html 
          HsBlog.Html.Internal 
        HsBlog.Markup 

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.4.0
      , directory
    hs-source-dirs:   src
    default-language: Haskell2010

executable hs-blog-gen
    import: common-settings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      OptParse 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hs-blog, 
        directory,
        optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: 
      -O
